--- a/templates/authentification.ejs
+++ b/templates/authentification.ejs
@@ -59,6 +59,11 @@
         <% } %>
       </div>
     </div>
+    <div class="row d-flex justify-content-center mt-4">
+      <a class="col-6 text-center text-decoration-none" href=<%= `${currentRoute === "/inscription" ? "login" : "inscription"}`%>>
+        <%= currentRoute === "/inscription" ? "Déjà inscrit? Connectez-vous ici" : "Suivez ce lien pour vous inscrire" %>
+      </a>
+    </div>
     <% if(errors !== [] && errors.length > 0){ %>
     <div class="row mt-3 d-flex justify-content-center ms-4">
       <ul class="list-group list-group-flush col-5">
